Removing mongo from dependencies, fixing bugs and refactoring